# cmake_entangled_libs

./: README.md
cclient/: CMakeLists.txt  test_cclient.c
